# A_A_fallas_HDD

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
final_proyect/: __init__.py  dataset.py  features.py  plots.py
final_proyect/modeling/: predict.py  train.py
notebooks/: CT.ipynb  final_proyect.ipynb
reports/: Reporte Proyecto Final.docx  ~$porte Proyecto Final.docx
