[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "final_proyect"
version = "0.0.1"
description = "Classification tree to detect failed drives using SMART attributes"
authors = [
  { name = "I\u00f1aki Sebasti\u00e1n Orozco Garc\u00eda" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.7"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["final_proyect"]
force_sort_within_sections = true
